Remove elementos da edição anterior #3

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@ image: Web128x128.jpg
             <div class="row">
                 <div class="col s12 m12 l6 xl6 center-align">
                     <div class="md-font flow-text blue-text text-lighten-5 valign">
-                        <p class="flow-text">X FÓRUM DE TECNOLOGIA EM SOFTWARE LIVRE</p><p class="flow-text">DE 24 A 26 DE OUTUBRO DE 2018</p></div>
+                        <p class="flow-text">XI FÓRUM DE TECNOLOGIA EM SOFTWARE LIVRE</p><p class="flow-text">2019</p></div>
 
                         <br>
                 </div>
 
                 <div class="col s12 m12 l6 xl6 hide-on-med-and-down center-align">
-                    <div class="md-font white-text valign" style="margin: 0">
+<!--                    <div class="md-font white-text valign" style="margin: 0">
 <p class="flow-text" style="font-color:white"><a href="https://ftsl.websiteseguro.com/ftsl10/apps/certificados">CERTIFICADO DE PALESTRAS</a></p>
 <p class="flow-text" style="font-color:white"><a href="http://sistema.ftsl.org.br/ftsl10/minicursos/certificado/">CERTIFICADO DE MINICURSOS</a></p>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
@@ -28,7 +28,7 @@ image: Web128x128.jpg
     <section class="panel blue darken-4" >
         <div class="container valign-wrapper" style="height: auto; padding: 20px">
             <div class="center-align">
-                <span class="xs-font white-text text-darken-4 flow-text">Agradecemos aos participantes que doaram um quilo de alimento não perecível no credenciamento.<br/> Os alimentos serão destinados a instituições beneficentes pela UTFPR.</span>               
+                <span class="xs-font white-text text-darken-4 flow-text">Participe do maior evento gratuito de software livre e aberto do Brasil.</span>               
             </div>
     </section>
 
@@ -190,11 +190,6 @@ image: Web128x128.jpg
                 	<a href="https://phpconference.com.br"><img src="images/phpconf.png" ></a>
 	            </div>
 		</div>	
-		<div class="col s6 m6 l6">
-	            	<div class="responsive-img center">
-	                <a href="http://minidebconf.curitiba.br/"><img src="images/minidebconflogo.jpg" ></a>
-			</div>
-	    	</div>
 	    </div>
         </div>
     </section>
