--- a/logo.html
+++ b/logo.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col s12 m6 l3 left-align">
                 <a href="http://www.utfpr.edu.br/" target="_blank">
-                    <img class="responsive-img" src="images/logo-utfpr.svg">
+                    <img class="responsive-img" src="" alt="Aguardando Parceria">
                 </a>
             </div>
             <div class="col s12 m6 l6 hide-on-med-and-down">
@@ -35,16 +35,6 @@
                 <div class="col s12 m6 l3 left-align">
                     <a href="http://assespropr.org.br/" target="_blank">
                         <img class="responsive-img left-align" src="images/logo-assespro.png" style="margin: 20px 0">
-                    </a>
-                </div>
-                <div class="col s12 m6 l3 left-align">
-                    <a href="https://www.brascloud.com.br/" target="_blank">
-                        <img class="responsive-img left-align" src="images/logo-brascloud.png" style="margin: 20px 0">
-                    </a>
-                </div>
-                <div class="col s12 m6 l3 left-align">
-                    <a href="http://anpei.org.br/" target="_blank">
-                        <img class="responsive-img left-align" src="images/logo-anpei.png" style="margin: 20px 0">
                     </a>
                 </div>
             </div>
