Atualizar site com data e local #4

--- a/evento.html
+++ b/evento.html
@@ -26,9 +26,8 @@ image: ../banners/Web128x128.png
                             <p>O Fórum de Tecnologia em Software Livre, FTSL, é um evento anual, realizado em Curitiba/PR, sendo considerado o maior evento gratuito de Software Livre do país, e tem como propósito a disseminação de novas tecnologias baseadas em Software Livre, bem como, a troca de experiências com as comunidades, universidades e empresas públicas e privadas, por meio de palestras e oficinas/minicursos.</p>
 <!--                            <p><span style="color: #0D47A1; font-weight: bold">Local de realização:</span> Universidade Tecnológica Federal do Paraná. Av. Sete de Setembro, 3165. </p>-->
                             <p> As atividades da programação estarão divididas em:</p>
-                            <p><span style="color: #0D47A1; font-weight: bold">Palestras: </span> por acadêmicos, estudantes, profissionais do mercado, empresas, políticos e pensadores com o intuito de aprofundar os conhecimentos científicos, técnicos, mercadológicos, políticos e sociais do Software Livre e da Liberdade do Conhecimento;</p>
+                            <p><span style="color: #0D47A1; font-weight: bold">Palestras: </span> ministradas por acadêmicos, estudantes e profissionais do mercado com o intuito de aprofundar os conhecimentos científicos, técnicos, mercadológicos, políticos e sociais do Software Livre e da Liberdade do Conhecimento;</p>
                             <p><span style="color: #0D47A1; font-weight: bold">Minicursos: </span> ministrados por profissionais a fim de transmitir conhecimentos práticos de um determinado assunto por meio de treinamentos e capacitação;</p>
-                            <p><span style="color: #0D47A1; font-weight: bold">Encontro de comunidades: </span> comunidades em torno de ferramentas e tecnologias livre realizam encontros técnicos durante o evento.</p>
                         </span>
                     </div>
                 </div>
