--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "X Fórum de Tecnologia em Software Livre"
-excerpt: "O maior evento gratuito de software livre do país!"
+title: "XI Fórum de Tecnologia em Software Livre e Aberto"
+excerpt: "O maior evento gratuito de software livre e aberto do país!"
 image: Web128x128.jpg
 ---
 
@@ -10,15 +10,15 @@ image: Web128x128.jpg
             <div class="row">
                 <div class="col s12 m12 l6 xl6 center-align">
                     <div class="md-font flow-text blue-text text-lighten-5 valign">
-                        <p class="flow-text">XI FÓRUM DE TECNOLOGIA EM SOFTWARE LIVRE</p><p class="flow-text">2019</p></div>
+                        <p class="flow-text">XI FÓRUM DE TECNOLOGIA EM SOFTWARE LIVRE E ABERTO</p><p class="flow-text">De 27 a 29 de novembro de 2019</p><p>SERPRO CURITIBA</p></div>
 
                         <br>
                 </div>
 
                 <div class="col s12 m12 l6 xl6 hide-on-med-and-down center-align">
 <!--                    <div class="md-font white-text valign" style="margin: 0">
-<p class="flow-text" style="font-color:white"><a href="https://ftsl.websiteseguro.com/ftsl10/apps/certificados">CERTIFICADO DE PALESTRAS</a></p>
-<p class="flow-text" style="font-color:white"><a href="http://sistema.ftsl.org.br/ftsl10/minicursos/certificado/">CERTIFICADO DE MINICURSOS</a></p>
+<p class="flow-text" style="font-color:white"><a href="https://ftsl.websiteseguro.com/ftsl11/apps/certificados">CERTIFICADO DE PALESTRAS</a></p>
+<p class="flow-text" style="font-color:white"><a href="http://sistema.ftsl.org.br/ftsl11/minicursos/certificado/">CERTIFICADO DE MINICURSOS</a></p>
                     </div>-->
                 </div>
             </div>
@@ -30,6 +30,7 @@ image: Web128x128.jpg
             <div class="center-align">
                 <span class="xs-font white-text text-darken-4 flow-text">Participe do maior evento gratuito de software livre e aberto do Brasil.</span>               
             </div>
+	</div>    
     </section>
 
 
@@ -41,10 +42,10 @@ image: Web128x128.jpg
                     <div class="row">
                         <div class="col s12 center-align">
                             <div class="grey-text text-darken-3"><i class="material-icons medium blue-text text-darken-4">keyboard_voice</i></div>
-                            <span class="sm-font center-align grey-text text-darken-3">Palestras</class><p>
+                            <span class="sm-font center-align grey-text text-darken-3">Palestras</span>
                         </div>
                         <div class="col s12  grey-text text-darken-3">
-                            Realizadas por acadêmicos, estudantes, profissionais do mercado, empresas, políticos e pensadores com o intuito de aprofundar os conhecimentos científicos, técnicos, mercadológicos e sociais do Software Livre e da Liberdade do Conhecimento.
+                            Realizadas por acadêmicos, estudantes e profissionais do mercado com o intuito de aprofundar os conhecimentos científicos, técnicos, mercadológicos e sociais do Software Livre e da Liberdade do Conhecimento.
                         </div>
                     </div>
                 </div>
@@ -52,62 +53,15 @@ image: Web128x128.jpg
                     <div class="row">
                         <div class="col s12 center-align">
                             <div class="grey-text text-darken-3"><i class="material-icons medium blue-text text-darken-4">watch_later</i></div>
-                            <span class="sm-font center-align grey-text text-darken-3">Minicursos</class><p>
+			    <span class="sm-font center-align grey-text text-darken-3">Minicursos</span>
                         </div>
                         <div class="col s12  grey-text text-darken-3">
                             Ministrados por profissionais a fim de transmitir conhecimentos práticos de um determinado assunto por meio de treinamentos e capacitação.
                         </div>
                     </div>
                 </div>
-                <div class="col s4">
-                    <div class="row">
-                        <div class="col s12 center-align">
-                            <div class="grey-text text-darken-3"><i class="material-icons medium blue-text text-darken-4">forum</i></div>
-                            <span class="sm-font center-align grey-text text-darken-3">Encontro de comunidades</class><p>
-                        </div>
-                        <div class="col s12  grey-text text-darken-3">
-                            Comunidades em torno de ferramentas e tecnologias livre realizam encontros técnicos durante o evento.
-                        </div>
-                    </div>
-                </div>
             </div>
 
-            <div class="row hide">
-                <div class="col s4">
-                    <div class="row">
-                        <div class="col s12 center-align">
-                            <div class="grey-text text-darken-3"><i class="material-icons medium blue-text text-darken-4">brightness_1</i></div>
-                            <span class="sm-font center-align grey-text text-darken-3">Mesas Redondas / Painéis</class><p>
-                        </div>
-                        <div class="col s12  grey-text text-darken-3">
-                            contará com a participação de profissionais e estudiosos dos temas,  qualificados e capacitados para conduzir as discussões de forma a incentivar o pensamento crítico dos participantes, visando a estimulação do debate sobre temas acadêmicos, tecnológicos e sociais relacionados ao Software Livre e a Liberdade do Conhecimento.
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col s4">
-                    <div class="row">
-                        <div class="col s12 center-align">
-                            <div class="grey-text text-darken-3"><i class="material-icons medium blue-text text-darken-4">memory</i></div>
-                            <span class="sm-font center-align grey-text text-darken-3">Torneio de Robótica</class><p>
-                        </div>
-                        <div class="col s12  grey-text text-darken-3">
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col s4">
-                    <div class="row">
-                        <div class="col s12 center-align">
-                            <div class="grey-text text-darken-3"><i class="material-icons medium blue-text text-darken-4">forum</i></div>
-                            <span class="sm-font center-align grey-text text-darken-3">Encontro de comunidades</class><p>
-                        </div>
-                        <div class="col s12  grey-text text-darken-3">
-                            comunidades em torno de ferramentas e tecnologias livre realizam encontros técnicos durante o evento.
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
 
@@ -115,9 +69,10 @@ image: Web128x128.jpg
         <div class="container valign-wrapper" style="height: auto; padding: 20px">
             <div class="center-align">
                 <span class="xs-font white-text text-darken-4 flow-text">Junte-se a 3000+ participantes</span><br>
-                <span class="md-font amber-text text-darken-1 flow-text"> no maior evento gratuito de Software Livre do país</span><br><br>
+                <span class="md-font amber-text text-darken-1 flow-text"> no maior evento gratuito de Software Livre e Aberto do país</span><br><br>
                 <a class="btn amber darken-4" href="evento.html">sobre o evento</a>
             </div>
+	</div>
     </section>
 
 <section id="convidados" class="panel grey darken-4">
@@ -166,9 +121,9 @@ image: Web128x128.jpg
     </section>
 
     <section class="panel blue-grey darken-4">
-        <div class="green ">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10194.630908771682!2d-49.274705782262856!3d-25.440290915416902!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x473a188118f5b033!2sUniversidade+Tecnol%C3%B3gica+Federal+do+Paran%C3%A1%2C+Reitoria!5e0!3m2!1spt-BR!2sbr!4v1463079670289" width="100%" height="500px" frameborder="0 " style="border:0;pointer-events: none;" allowfullscreen onfocus="blur()">
-            </iframe>
+        <p style="color:white">O evento será realizado no auditório e salas de treinamento da regional Curitiba do Serviço Federal de Processamento de Dados - SERPRO - na rua Carlos Pioli, 133, bairro Bom Retiro</p>
+        <div class="green">
+		<a href="https://www.openstreetmap.org/#map=19/-25.41184/-49.27277"><img src="images/openstreetmap.png" width="100%" height="500px"></a>
         </div>
     </section>
 
@@ -187,7 +142,7 @@ image: Web128x128.jpg
             <div class="row">
             	<div class="col s6 m6 l6">
 	            <div class="responsive-img center">
-                	<a href="https://phpconference.com.br"><img src="images/phpconf.png" ></a>
+                	<a href="https://www.phpconference.com.br"><img src="images/phpconf.png" ></a>
 	            </div>
 		</div>	
 	    </div>
