--- a/logo.html
+++ b/logo.html
@@ -2,30 +2,15 @@
 
 <section class="white">
     <div class="container">
-        <div class="row">
-            <div class="col s12 m12 l12 xl12">
-                <span class="sm-font">Realização</span>
-                <hr style="width: 100%">
-            </div>
-            <div class="col s12 m6 l6 hide-on-med-and-down">
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col s12 m6 l3 left-align">
-                <a href="http://www.utfpr.edu.br/" target="_blank">
-                    <img class="responsive-img" src="" alt="Aguardando Parceria">
-                </a>
-            </div>
-            <div class="col s12 m6 l6 hide-on-med-and-down">
-                &nbsp;
-            </div>
-        </div>
-
             <div class="row">
                 <div class="col s12 m12 l12 xl12">
                     <span class="sm-font">Apoio</span>
                     <hr style="width: 100%">
+                </div>
+                <div class="col s12 m6 l3 left-align">
+                    <a href="http://www.serpro.gov.br/" target="_blank">
+                        <img class="responsive-img left-align" src="images/serpro-logo.png" style="margin: 20px 0">
+                    </a>
                 </div>
                 <div class="col s12 m6 l3 left-align">
                     <a href="http://www.prsucesu.org.br/" target="_blank">
