--- a/programacao.html
+++ b/programacao.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Programação (sujeita a alterações)"
-excerpt: "Grade de programação do IX Fórum de Tecnologia em Software Livre de Curitiba"
+excerpt: "Grade de programação do XI Fórum de Tecnologia em Software Livre e Aberto de Curitiba"
 ---
 
 <table>
@@ -11,11 +11,11 @@ excerpt: "Grade de programação do IX Fórum de Tecnologia em Software Livre de
 <td><a href="https://github.com/ftslorgbr/documentos/blob/master/programacao/2019/ftsl11_programacao.pdf" download>Programação completa</a></td>
 </tr>
 <tr>
-<td><a href="{{ site.baseurl }}/24.html">24/10 (quarta-feira)</a></td>
+<td><a href="{{ site.baseurl }}/24.html">27/11 (quarta-feira)</a></td>
 
-<td><a href="{{ site.baseurl }}/25.html">25/10 (quinta-feira) - Abertura</a> </td>
+<td><a href="{{ site.baseurl }}/25.html">28/11 (quinta-feira) - Abertura</a> </td>
 
-<td><a href="{{ site.baseurl }}/26.html">26/10 (sexta-feira)</a></td>
+<td><a href="{{ site.baseurl }}/26.html">29/11 (sexta-feira)</a></td>
 !-->
 <tr>
 </tbody>
