Preparar grade de programação #8

--- a/27.html
+++ b/27.html
@@ -1,10 +1,10 @@
 ---
 layout: post
 title:  "Programação de palestras e minicursos (sujeita a alterações)"
-excerpt: "Palestras e minicursos do dia 24/10/2018"
+excerpt: "Palestras e minicursos do dia 27/11/2019"
 ---
 
-<h1>24/10/2018</h1>
+<h1>27/11/2019</h1>
 <h2>Palestras</h2>
 <h3>Audit&oacute;rio</h3>
 <table typeactivity="palestra" roomactivity="auditorio">
@@ -16,18 +16,17 @@ excerpt: "Palestras e minicursos do dia 24/10/2018"
 <tbody>
 <tr>
 <td>09:00</td>
-<td>Software Livre como Politica de Governo</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/antoniotiboni.html">Antonio Tiboni</a></td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
 </tr>
 <tr>
 <td>10:00</td>
-<td>Do PHP ao Zend Framework: Domine as boas práticas</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/flaviogomesdasilvalisboa.html">Flávio Gomes da Silva Lisboa</a></td>
-</tr>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td></tr>
 <tr>
 <td>11:00</td>
-<td>Entendendo os famosos Test Doubles</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/viniciusbailalonso.html">Vin&iacute;cius Bail Alonso</a></td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
 </tr>
 <tr>
 <td>12:00</td>
@@ -36,108 +35,30 @@ excerpt: "Palestras e minicursos do dia 24/10/2018"
 </tr>
 <tr>
 <td>14:00</td>
-<td>Smartcash - Criptomoeda inteligente e funcional</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/juarezdelara.html">Juarez de Lara</a></td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
 </tr>
 <tr>
 <td>15:00</td>
-<td>A inclus&atilde;o das mulheres na &aacute;rea de TI</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/anamariaferreiralemos.html">Ana Maria Ferreira Lemos</a></td>
-</tr>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td></tr>
 <tr>
 <td>16:00</td>
-<td>Inicio com React Native</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/lucasbarbosarodrigues.html">Lucas Barbosa Rodrigues</a></td>
-</tr>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td></tr>
 <tr>
 <td>17:00</td>
-<td>An&aacute;lise de estimativa de erro aplicada a problemas de Intera&ccedil;&atilde;o Fluido-Estrutura</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/danielcoradinischwarz.html">Daniel Coradini Schwarz</a></td>
-</tr>
-</tbody>
-</table>
-<h3>Sala 1 - DAELN - Q201</h3>
-<table typeactivity="palestra" roomactivity="Q201">
-<thead>
-<th>Hor&aacute;rio</th>
-<th>T&iacute;tulo</th>
-<th>Palestrante</th>
-</thead>
-<tbody>
-<tr>
-<td>09:00</td>
-<td>git do mochileiro das galaxias - A comunidade, seu curriculo e tudo mais...</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/alissoncoelhomorais.html">Alisson Coelho Morais</a></td>
-</tr>
-<tr>
-<td>10:00</td>
-<td>O Gimp, como ferramenta did&aacute;tica para o ensino formal</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/liscarolineribeirorosa.html">Lis Caroline Ribeiro Rosa</a></td>
-</tr>
-<tr>
-<td>11:00</td>
-<td>Sem atividade</td>
-<td><a href="">Sem atividade</a></td>
-</tr>
-</tbody>
-</table>
-<h3>Sala 2 - DAELN - Q210</h3>
-<table typeactivity="palestra" roomactivity="Q210">
-<thead>
-<th>Hor&aacute;rio</th>
-<th>T&iacute;tulo</th>
-<th>Palestrante</th>
-</thead>
-<tbody>
-<tr>
-<td>09:00</td>
-<td>Ad-Blocking: por que fazer?</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/fernaovellozo.html">Fern&atilde;o Vellozo</a></td>
-</tr>
-<tr>
-<td>10:00</td>
-<td>Ensino de programa&ccedil;&atilde;o com Scratch e AppInventor</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/flaviogomesdasilvalisboa.html">Fl&aacute;vio Gomes da Silva Lisboa</a></td>
-</tr>
-<tr>
-<td>11:00</td>
-<td>Introdu&ccedil;&atilde;o &agrave; constru&ccedil;&atilde;o de firmwares para dispositivos m&oacute;veis e embarcados</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/fernaovellozo.html">Fern&atilde;o Vellozo</a></td>
-</tr>
-</tbody>
-</table>
-<h3>Sala 3 - DAINF - B108</h3>
-<table typeactivity="palestra" roomactivity="B108">
-<thead>
-<th>Hor&aacute;rio</th>
-<th>T&iacute;tulo</th>
-<th>Palestrante</th>
-</thead>
-<tbody>
-<tr>
-<td>09:00</td>
-<td>DevOps indo al&eacute;m de um mundo ferramental</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/christianolinuxmen.html">Christiano Linuxmen</a></td>
-</tr>
-<tr>
-<td>10:00</td>
-<td>O canivete su&iacute;co do DevOps</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/danielrequena.html">Daniel Requena</a></td>
-</tr>
-<tr>
-<td>11:00</td>
-<td>Como aumentar a resili&ecirc;ncia do seu site contra ataques DDoS</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/eduardoneves.html">Eduardo Neves</a></td>
-</tr>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td></tr>
 </tbody>
 </table>
 <h2>Minicursos</h2>
 <p><ul>
+<li>Manhã: 09:00 &agrave;s 12:00</li>
 <li>Tarde: 14:00 &agrave;s 17:00</li>
-<li>Noite: 18:00 &agrave;s 21:00</li>
 </ul>
 </p>
-<h3>Sala 1 - DAELN - Q201</h3>
+<h3>Sala 403</h3>
 <table typeactivity="curso" roomactivity="Q201">
 <thead>
 <th>Hor&aacute;rio</th>
@@ -146,23 +67,23 @@ excerpt: "Palestras e minicursos do dia 24/10/2018"
 </thead>
 <tbody>
 <tr>
+<td>Manhã</td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
+</tr>
+<tr>
+<td>12:00</td>
+<td>Almoço</td>
+<td><a href="">Almoço</a></td>
+</tr>
+<tr>
 <td>Tarde</td>
-<td>Colagem Digital</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/liscarolineribeirorosa.html">Lis Caroline Ribeiro Rosa</a></td>
-</tr>
-<tr>
-<td>17:00</td>
-<td>Intervalo</td>
-<td><a href="">Intervalo</a></td>
-</tr>
-<tr>
-<td>18:00</td>
-<td>Mini-curso de Perl</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/diogoguilhermegarciadefreitas.html">Diogo Guilherme Garcia de Freitas</a></td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
 </tr>
 </tbody>
 </table>
-<h3>Sala 2 - DAELN - Q210</h3>
+<h3>Sala 404</h3>
 <table typeactivity="curso" roomactivity="Q210">
 <thead>
 <th>Hor&aacute;rio</th>
@@ -171,54 +92,19 @@ excerpt: "Palestras e minicursos do dia 24/10/2018"
 </thead>
 <tbody>
 <tr>
-<td>Tarde</td>
-<td>Como criar pe&ccedil;as publicit&aacute;rias com ferramentas livres</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/angelorosa.html">Ângelo Rosa</a></td>
+<td>Manhã</td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
 </tr>
 <tr>
-<td>17:00</td>
-<td>Intervalo</td>
-<td><a href="">Intervalo</a></td>
+<td>12:00</td>
+<td>Almoço</td>
+<td><a href="">Almoço</a></td>
 </tr>
-<tr>
-<td>Noite</td>
-<td>Kotlin no Android</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/lucassantonioramossartori.html">Lucas Antonio Ramos Sartori</a></td>
-</tr>
-</tbody>
-</table>
-<h3>Sala 3 - DAINF - B108</h3>
-<table typeactivity="curso" roomactivity="B106">
-<thead>
-<th>Hor&aacute;rio</th>
-<th>T&iacute;tulo</th>
-<th>Instrutor(a)</th>
-</thead>
-<tbody>
-<tr>
-<td>Noite</td>
-<td>Desenvolvimento de uma Infraestrutura &aacute;gil com Pr&aacute;ticas DevOps</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/eduardoneves.html">Eduardo Neves</a> e <a href="http://ftsl.org.br/ftsl10/convidados/christianolinuxmen.html">Christiano Linuxmen</a></td>
-</tr>
-</tbody>
-</table>
-<h3>Sala 4 - DAINF - B106</h3>
-<table typeactivity="curso" roomactivity="B106">
-<thead>
-<th>Hor&aacute;rio</th>
-<th>T&iacute;tulo</th>
-<th>Instrutor(a)</th>
-</thead>
-<tbody>
 <tr>
 <td>Tarde</td>
-<td>Coding Dojo com Elixir </td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/adolfogustavoserrasecaneto.html">Adolfo Gustavo Serra Seca Neto</a></td>
-</tr>
-<tr>
-<td>Noite</td>
-<td>Docker: do Hello World ao deploy</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/viniciusbailalonso.html">Vin&iacute;cius Bail Alonso</a></td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
 </tr>
 </tbody>
 </table>
