--- a/28.html
+++ b/28.html
@@ -1,10 +1,10 @@
 ---
 layout: post
 title:  "Programação de palestras e minicursos (sujeita a alterações)"
-excerpt: "Palestras e minicursos do dia 25/10/2018"
+excerpt: "Palestras e minicursos do dia 28/11/2019"
 ---
 
-<h1>25/10/2018</h1>
+<h1>28/11/2019</h1>
 <h2>Palestras</h2>
 <h3>Audit&oacute;rio</h3>
 <table typeactivity="palestra" roomactivity="auditorio">
@@ -16,18 +16,17 @@ excerpt: "Palestras e minicursos do dia 25/10/2018"
 <tbody>
 <tr>
 <td>09:00</td>
-<td>Sistema Operacional Linux &#45; Desenvolvimento e Distribui&ccedil;&atilde;o</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/kaiquespagnoltofoli.html">Kaique Spagnol Tofoli</a></td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
 </tr>
 <tr>
 <td>10:00</td>
-<td>2019: A Computer Odyssey</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/jonmaddoghall.html">Jon 'Maddog' Hall</a></td>
-</tr>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td></tr>
 <tr>
 <td>11:00</td>
-<td>O software livre e a liberdade de express&atilde;o</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/wagnerdealcantaraaragao.html">Wagner de Alcântara Arag&atilde;o</a></td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
 </tr>
 <tr>
 <td>12:00</td>
@@ -37,207 +36,30 @@ excerpt: "Palestras e minicursos do dia 25/10/2018"
 <tr>
 <td>14:00</td>
 <td>Abertura</td>
-<td><a href="">Abertura</a></td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
 </tr>
 <tr>
 <td>15:00</td>
-<td>Colabore com projetos de Software Livre e impulsione sua carreira</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/giovaniferreira.html">Giovani Ferreira</a></td>
-</tr>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td></tr>
 <tr>
 <td>16:00</td>
-<td>Moodle como Ambiente Virtual de Aprendizagem</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/jezielpereira.html">Jeziel Pereira</a></td>
-</tr>
-</tbody>
-</table>
-<h3>Mini-audit&oacute;rio</h3>
-<table typeactivity="palestra" roomactivity="miniauditorio">
-<thead>
-<th>Hor&aacute;rio</th>
-<th>T&iacute;tulo</th>
-<th>Palestrante</th>
-</thead>
-<tbody>
-<tr>
-<td>09:00</td>
-<td>Utiliza&ccedil;&atilde;o de Octave na an&aacute;lise de Propaga&ccedil;&atilde;o de trincas: Paris Erdogan</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/alexandreguilhermedelara.html">Alexandre Guilherme de Lara</a></td>
-</tr>
-<tr>
-<td>10:00</td>
-<td>OpenTSDB - Implanta&ccedil;&atilde;o de um distribu&iacute;do e escal&aacute;vel banco de dados temporal </td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/kevintesta.html">Kevin Testa</a></td>
-</tr>
-<tr>
-<td>11:00</td>
-<td>OpenStreetMap, uma alternativa ao Google Maps</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/fabioleandrolapuinka.html"></a></td>
-</tr>
-<tr>
-<td>12:00</td>
-<td>Almo&ccedil;o</td>
-<td><a href="">Almo&ccedil;o</a></td>
-</tr>
-<tr>
-<td>14:00</td>
-<td>Abertura</td>
-<td><a href="">Abertura</a></td>
-</tr>
-<tr>
-<td>15:00</td>
-<td>Uso do SELKS para IDS/IPS</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/andreavelinodacostasantos.html">Andr&eacute; Avelino da Costa Santos</a></td>
-</tr>
-<tr>
-<td>16:00</td>
-<td>Fronteiras com VPNs no OpenBSD </td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/alexandredorazio.html">Alexandre Dorazio</a></td>
-</tr>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td></tr>
 <tr>
 <td>17:00</td>
-<td>Big "Open Source" Data</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/tiagodefreitaslima.html">Tiago de Freitas Lima</a></td>
-</tr>
-<tr>
-<td>18:00</td>
-<td>Experi&ecirc;ncias na aprendizagem de jovens estudantes Portadores de Defici&ecirc;ncias (PCD's) em Institui&ccedil;&otilde;es de Ensino</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/mauricioferste.html">Maur&iacute;cio Ferste</a></td>
-</tr>
-</tbody>
-</table>
-<h3>Sala 1 - DAELN - Q201</h3>
-<table typeactivity="palestra" roomactivity="Q201">
-<thead>
-<th>Hor&aacute;rio</th>
-<th>T&iacute;tulo</th>
-<th>Palestrante</th>
-</thead>
-<tbody>
-<tr>
-<td>09:00</td>
-<td>Simplificando o Java com Lombok</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/victorwilliamsstafusadasilva.html">Victor Williams Stafusa da Silva</a></td>
-</tr>
-<tr>
-<td>10:00</td>
-<td>Desenvolvendo Jogos em HTML 5</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/victorwilliamsstafusadasilva.html">Victor Williams Stafusa da Silva</a></td>
-</tr>
-<td>11:00</td>
-<td>Cat&aacute;logo de Sistemas na Prefeitura de S&atilde;o Paulo</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/victorwilliamsstafusadasilva.html">Victor Williams Stafusa da Silva</a></td>
-</tr>
-<tr>
-<td>12:00</td>
-<td>Almo&ccedil;o</td>
-<td><a href="">Almo&ccedil;o</a></td>
-</tr>
-<tr>
-<td>14:00</td>
-<td>Sem atividade</td>
-<td><a href=""></a>Sem atividade</td>
-</tr>
-<tr>
-<td>15:00</td>
-<td>Desmistificando o JPA</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/victorwilliamsstafusadasilva.html">Victor Williams Stafusa da Silva</a></td>
-</tr>
-<tr>
-<td>16:00</td>
-<td>Saindo da era mesoz&oacute;ica do Java em dire&ccedil;&atilde;o ao Java 11</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/victorwilliamsstafusadasilva.html">Victor Williams Stafusa da Silva</a></td>
-</tr>
-<tr>
-<td>17:00</td>
-<td>Sem atividade</td>
-<td><a href="">Sem atividade</a></td>
-</tr>
-</tbody>
-</table>
-<h3>Sala 2 - DAELN - Q210</h3>
-<table typeactivity="palestra" roomactivity="Q210">
-<thead>
-<th>Hor&aacute;rio</th>
-<th>T&iacute;tulo</th>
-<th>Palestrante</th>
-</thead>
-<tbody>
-<tr>
-<td>09:00</td>
-<td>Configurando e usando PHP com OpenCV e Redes Neurais</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/welltoncostadeoliveira.html">Wellton Costa de Oliveira</a></td>
-</tr>
-<tr>
-<td>10:00</td>
-<td>Como crescer r&aacute;pido e hacker a carreira</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/israeloliveira.html">Israel Oliveira</a></td>
-</tr>
-<tr>
-<td>11:00</td>
-<td>Infraestrutura como c&oacute;digo usando Terraform</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/andreavelinodacostasantos.html">Andr&eacute; Avelino da Costa Santos</a></td>
-</tr>
-<tr>
-<td>12:00</td>
-<td>Almo&ccedil;o</td>
-<td><a href="">Almo&ccedil;o</a></td>
-</tr>
-<tr>
-<td>14:00</td>
-<td>Sem atividade</td>
-<td><a href="">Sem atividade</a></td>
-</tr>
-<tr>
-<td>15:00</td>
-<td>Roteadores Livres: redes mesh em OpenWRT</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/rodrigotroian.html">Rodrigo Troian</a>/<a href="http://ftsl.org.br/ftsl10/convidados/fernaovellozo.html">Fern&atilde;o Vellozo</a></td>
-</tr>
-<tr>
-<td>16:00</td>
-<td>Roteadores Livres: redes mesh em OpenWRT</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/rodrigotroian.html">Rodrigo Troian</a>/<a href="http://ftsl.org.br/ftsl10/convidados/fernaovellozo.html">Fern&atilde;o Vellozo</a></td>
-</tr>
-<tr>
-<td>17:00</td>
-<td>Gest&atilde;o de segredos com Vault</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/andreavelinodacostasantos.html">Andr&eacute; Avelino da Costa Santos</a></td>
-</tr>
-</tbody>
-</table>
-<h3>Sala 3 - DAINF - B107</h3>
-<table typeactivity="palestra" roomactivity="B107">
-<thead>
-<th>Hor&aacute;rio</th>
-<th>T&iacute;tulo</th>
-<th>Palestrante</th>
-</thead>
-<tbody>
-<tr>
-<td>09:00</td>
-<td>TDD no mundo real com PHP</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/andrecardoso.html">Andr&eacute; Cardoso</a></td>
-</tr>
-<tr>
-<td>10:00</td>
-<td>Acervos digitais: a solu&ccedil;&atilde;o Tainacan</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/fabiannebalvedi.html">Fabianne Balvedi</a></td>
-</tr>
-<tr>
-<td>11:00</td>
-<td>PHP Fishbowl</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/andrecardoso.html">Andr&eacute; Cardoso</a></td>
-</tr>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td></tr>
 </tbody>
 </table>
 <h2>Minicursos</h2>
 <p><ul>
-<li>Tarde: 15:00 &agrave;s 18:00</li>
-<li>Noite: 18:00 &agrave;s 21:00</li>
+<li>Manhã: 09:00 &agrave;s 12:00</li>
+<li>Tarde: 14:00 &agrave;s 17:00</li>
 </ul>
 </p>
-<h3>Sala 2 - DAELN - Q210</h3>
-<table typeactivity="palestra" roomactivity="Q210">
+<h3>Sala 403</h3>
+<table typeactivity="curso" roomactivity="Q201">
 <thead>
 <th>Hor&aacute;rio</th>
 <th>T&iacute;tulo</th>
@@ -245,60 +67,46 @@ excerpt: "Palestras e minicursos do dia 25/10/2018"
 </thead>
 <tbody>
 <tr>
-<td>Noite</td>
-<td>Como criar sua pr&oacute;pria Autoridade Certificadora Raiz</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/fernaovellozo.html">Fern&atilde;o Vellozo</a></td>
+<td>Manhã</td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
 </tr>
-</tbody>
-</table>
-<h3>Sala 3 - DAINF - B201</h3>
-<table typeactivity="palestra" roomactivity="B201">
-<thead>
-<th>Hor&aacute;rio</th>
-<th>T&iacute;tulo</th>
-<th>Instrutor(a)</th>
-</thead>
-<tbody>
+<tr>
+<td>12:00</td>
+<td>Almoço</td>
+<td><a href="">Almoço</a></td>
+</tr>
 <tr>
 <td>Tarde</td>
-<td>O software R como ferramenta para gest&atilde;o financeira</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/jonasliebl.html">Jonas Liebl</a></td>
-</tr>
-<tr>
-<td>Noite</td>
-<td>Comparativo das tecnologias na transmiss&atilde;o de dados via r&aacute;dio, com os NRF24L01+, e o LoRa SX1278</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/leopoldodemelloribeiro.html">Leopoldo de Mello Ribeiro</a></td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
 </tr>
 </tbody>
 </table>
-<h3>Sala 4 - DAINF - B109</h3>
-<table typeactivity="palestra" roomactivity="B202">
+<h3>Sala 404</h3>
+<table typeactivity="curso" roomactivity="Q210">
 <thead>
 <th>Hor&aacute;rio</th>
 <th>T&iacute;tulo</th>
 <th>Instrutor(a)</th>
 </thead>
 <tbody>
+<tr>
+<td>Manhã</td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
+</tr>
+<tr>
+<td>12:00</td>
+<td>Almoço</td>
+<td><a href="">Almoço</a></td>
+</tr>
 <tr>
 <td>Tarde</td>
-<td>Autodefesa no E-mail: garanta o sigilo e autenticidade de suas mensagens com criptografia</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/emersonsachiosaito.html">&Eacute;merson Sachio Saito</a> e <a href="http://ftsl.org.br/ftsl10/convidados/flavioarcega.html">Fl&aacute;vio Casas de Arcega</a></td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
 </tr>
 </tbody>
 </table>
-<h3>Sala 5 - DAINF - B202</h3>
-<table typeactivity="palestra" roomactivity="B202">
-<thead>
-<th>Hor&aacute;rio</th>
-<th>T&iacute;tulo</th>
-<th>Instrutor(a)</th>
-</thead>
-<tbody>
-<tr>
-<td>Noite</td>
-<td>Introdu&ccedil;&atilde;o ao Kubernetes</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/danielrequena.html">Daniel Requena</a></td>
-</tr>
-</tbody>
-</table>
+
 <a href="{{ site.baseurl }}/programacao.html">Voltar</a>
