--- a/29.html
+++ b/29.html
@@ -1,10 +1,10 @@
 ---
 layout: post
-title:  "Programação de palestras e minicursos"
-excerpt: "Palestras e minicursos do dia 26/10/2018"
+title:  "Programação de palestras e minicursos (sujeita a alterações)"
+excerpt: "Palestras e minicursos do dia 29/11/2019"
 ---
 
-<h1>26/10/2018</h1>
+<h1>29/11/2019</h1>
 <h2>Palestras</h2>
 <h3>Audit&oacute;rio</h3>
 <table typeactivity="palestra" roomactivity="auditorio">
@@ -16,18 +16,17 @@ excerpt: "Palestras e minicursos do dia 26/10/2018"
 <tbody>
 <tr>
 <td>09:00</td>
-<td>Business Intelligence e Dados Abertos</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/rafaelaraganham.html">Rafaela Raganham</a></td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
 </tr>
 <tr>
 <td>10:00</td>
-<td>Pentaho Business Intelligence & Analytics convergindo com Data Science, Big Data e Machine Learning</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/marciojuniorvieira.html">M&aacute;rcio Júnior Vieira</a></td>
-</tr>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td></tr>
 <tr>
 <td>11:00</td>
-<td>Unimed-PR: Modelo de an&aacute;lise de informa&ccedil;&otilde;es aplicado na aten&ccedil;&atilde;o &aacute; saúde</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/marcelodallagassa.html">Marcelo Dallagassa</a></td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
 </tr>
 <tr>
 <td>12:00</td>
@@ -36,112 +35,55 @@ excerpt: "Palestras e minicursos do dia 26/10/2018"
 </tr>
 <tr>
 <td>14:00</td>
-<td>Desenvolvendo projetos de BI utilizando framework SD3</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/williamtrochmann.html">William Trochmann</a></td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
 </tr>
 <tr>
 <td>15:00</td>
-<td> O poder do Data Warehouse em aplica&ccedil;&otilde;es de Machine Learning</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/rodrigonogueira.html">Rodrigo Nogueira</a></td>
-</tr>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td></tr>
 <tr>
 <td>16:00</td>
-<td>Pentaho Data Mining - Apresenta&ccedil;&atilde;o, Cen&aacute;rios e oportunidades</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/marcosviniciusfidelis.html">Marcos Vinicius Fidelis</a></td>
-</tr>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td></tr>
 <tr>
 <td>17:00</td>
-<td>Self-service BI com Pentaho &#45; mais autonomia para seus usu&aacute;rios</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/neimarchagas.html">Neimar Chagas</a></td>
-</tr>
-</tbody>
-</table>
-<h3>Mini-audit&oacute;rio</h3>
-<table typeactivity="palestra" roomactivity="miniauditorio">
-<thead>
-<th>Hor&aacute;rio</th>
-<th>T&iacute;tulo</th>
-<th>Palestrante</th>
-</thead>
-<tbody>
-<tr>
-<td>09:00</td>
-<td>Debian 101</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/samuelhenrique.html">Samuel Henrique</a></td>
-</tr>
-<tr>
-<td>10:00</td>
-<td>O Projeto Debian quer voc&ecirc;!</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/paulohenriquedelimasantana.html">Paulo Henrique de Lima Santana</a></td>
-</tr>
-<tr>
-<td>11:00</td>
-<td>Como se tornar um membro oficial do Debian (DD ou DM)</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/joaoeribertomotafilho.html">Jo&atilde;o Eriberto Mota Filho</a></td>
-</tr>
-<tr>
-<td>12:00</td>
-<td>Almo&ccedil;o</td>
-<td><a href="">Almo&ccedil;o</a></td>
-</tr>
-<tr>
-<td>14:00</td>
-<td>Conhecendo o Sistema de Bugs do Debian (BTS)</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/giovaniferreira.html">Giovani Ferreira</a></td>
-</tr>
-<tr>
-<td>15:00</td>
-<td>O projeto de Integra&ccedil;&atilde;o Cont&iacute;nua do Debian</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/antonioterceiro.html">Antonio Terceiro</a></td>
-</tr>
-<tr>
-<td>16:00</td>
-<td>Como fazer o Debian reconhecer faces em imagens</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/welltoncostadeoliveira.html">Wellton Costa de Oliveira</a></td>
-</tr>
-<tr>
-<td>17:00</td>
-<td>Debian Security Tools - Passado, Presente e Futuro</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/giovaniferreira.html">Giovani Ferreira</a>,<a href="http://ftsl.org.br/ftsl10/convidados/joaoeribertomotafilho.html">Jo&atilde;o Eriberto Mota Filho</a> e <a href="http://ftsl.org.br/ftsl10/convidados/samuelhenrique.html">Samuel Henrique</a></td>
-</tr>
-<tr>
-<td>18:00</td>
-<td>Debian: um universo em constru&ccedil;&atilde;o</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/giovaniferreira.html">Giovani Ferreira</a></td>
-</tr>
-<tr>
-<td>19:00</td>
-<td>Mantendo pacotes Debian com Git</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/lucaskanashiro.html">Lucas Kanashiro</a></td>
-</tr>
-</tbody>
-</table>
-<h3>Sala 1 - DAELN - Q201</h3>
-<table typeactivity="palestra" roomactivity="Q201">
-<thead>
-<th>Hor&aacute;rio</th>
-<th>T&iacute;tulo</th>
-<th>Palestrante</th>
-</thead>
-<tbody>
-<tr>
-<td>09:00</td>
-<td>Revisando os conceitos: Makers ou Hackers</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/antonioccmarques.html">Antonio C. C. Marques</a></td>
-</tr>
-<tr>
-<td>10:00</td>
-<td>Trabalhe menos, Ganhe mais - Como valorizar o mercado interno de desenvolvimento</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/flaviosilveira.html">Fl&aacute;vio Silveira</a></td>
-</tr>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td></tr>
 </tbody>
 </table>
 <h2>Minicursos</h2>
 <p><ul>
+<li>Manhã: 09:00 &agrave;s 12:00</li>
 <li>Tarde: 14:00 &agrave;s 17:00</li>
 </ul>
 </p>
-<h3>Sala 2 - DAELN - Q210</h3>
+<h3>Sala 403</h3>
+<table typeactivity="curso" roomactivity="Q201">
+<thead>
+<th>Hor&aacute;rio</th>
+<th>T&iacute;tulo</th>
+<th>Instrutor(a)</th>
+</thead>
+<tbody>
+<tr>
+<td>Manhã</td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
+</tr>
+<tr>
+<td>12:00</td>
+<td>Almoço</td>
+<td><a href="">Almoço</a></td>
+</tr>
+<tr>
+<td>Tarde</td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
+</tr>
+</tbody>
+</table>
+<h3>Sala 404</h3>
 <table typeactivity="curso" roomactivity="Q210">
 <thead>
 <th>Hor&aacute;rio</th>
@@ -150,15 +92,21 @@ excerpt: "Palestras e minicursos do dia 26/10/2018"
 </thead>
 <tbody>
 <tr>
-<td>Tarde</td>
-<td>Empacotamento de software no Debian</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/joaoeribertomotafilho.html">Jo&atilde;o Eriberto Mota Filho</a></td>
+<td>Manhã</td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
 </tr>
 <tr>
-<td>17:00</td>
-<td>Distribui&ccedil;&otilde;es GNU/Linux, como escolher a sua</td>
-<td><a href="http://ftsl.org.br/ftsl10/convidados/cleberianes.html">Cleber Ianes</a></td>
+<td>12:00</td>
+<td>Almoço</td>
+<td><a href="">Almoço</a></td>
+</tr>
+<tr>
+<td>Tarde</td>
+<td>Em definição</td>
+<td><a href="http://ftsl.org.br/ftsl11/convidados">Em definição</a></td>
 </tr>
 </tbody>
 </table>
+
 <a href="{{ site.baseurl }}/programacao.html">Voltar</a>
