--- a/programacao.html
+++ b/programacao.html
@@ -7,8 +7,7 @@ excerpt: "Grade de programação do XI Fórum de Tecnologia em Software Livre e 
 <table>
 <tbody>
 <tr>
-<!--
-<td><a href="https://github.com/ftslorgbr/documentos/blob/master/programacao/2019/ftsl11_programacao.pdf" download>Programação completa</a></td>
+<!--<td><a href="https://github.com/ftslorgbr/documentos/blob/master/programacao/2019/ftsl11_programacao.pdf" download>Programação completa</a></td>-->
 </tr>
 <tr>
 <td><a href="{{ site.baseurl }}/24.html">27/11 (quarta-feira)</a></td>
@@ -16,7 +15,7 @@ excerpt: "Grade de programação do XI Fórum de Tecnologia em Software Livre e 
 <td><a href="{{ site.baseurl }}/25.html">28/11 (quinta-feira) - Abertura</a> </td>
 
 <td><a href="{{ site.baseurl }}/26.html">29/11 (sexta-feira)</a></td>
-!-->
+
 <tr>
 </tbody>
 </table>
