--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@ image: Web128x128.jpg
                         </div>
                     </div>
                 </div>
+                <div class="col s4">
+                    <div class="row">
+                        <div class="col s12 center-align">
+                            <div class="grey-text text-darken-3"><i class="material-icons medium blue-text text-darken-4">watch_later</i></div>
+			    <span class="sm-font center-align grey-text text-darken-3">Networking</span>
+                        </div>
+                        <div class="col s12  grey-text text-darken-3">
+                            Compartilhe conhecimentos e experiências. Encontre profissionais. Seja encontrado.
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
