--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ image: Web128x128.jpg
             <div class="row">
                 <div class="col s12 m12 l6 xl6 center-align">
                     <div class="md-font flow-text blue-text text-lighten-5 valign">
-                        <p class="flow-text">XI FÓRUM DE TECNOLOGIA EM SOFTWARE LIVRE E ABERTO</p><p class="flow-text">De 27 a 29 de novembro de 2019</p><p>SERPRO CURITIBA</p></div>
+                        <p class="flow-text">XI FÓRUM DE TECNOLOGIA EM SOFTWARE LIVRE E ABERTO</p><p class="flow-text">De 27 a 29 de novembro de 2019</p><p></p></div>
 
                         <br>
                 </div>
@@ -132,9 +132,9 @@ image: Web128x128.jpg
     </section>
 
     <section class="panel blue-grey darken-4">
-        <p style="color:white">O evento será realizado no auditório e salas de treinamento da regional Curitiba do Serviço Federal de Processamento de Dados - SERPRO - na rua Carlos Pioli, 133, bairro Bom Retiro</p>
+        <p style="color:white"></p>
         <div class="green">
-		<a href="https://www.openstreetmap.org/#map=19/-25.41184/-49.27277"><img src="images/openstreetmap.png" width="100%" height="500px"></a>
+		<a href=""><img src="" width="100%" height="500px"></a>
         </div>
     </section>
 
