Alterar local e avisar sobre adiamento #10

--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@ image: Web128x128.jpg
             <div class="row">
                 <div class="col s12 m12 l6 xl6 center-align">
                     <div class="md-font flow-text blue-text text-lighten-5 valign">
-                        <p class="flow-text">XI FÓRUM DE TECNOLOGIA EM SOFTWARE LIVRE E ABERTO</p><p class="flow-text">De 27 a 29 de novembro de 2019</p><p></p></div>
+                        <p class="flow-text">XI FÓRUM DE TECNOLOGIA EM SOFTWARE LIVRE E ABERTO</p><p class="flow-text">ATENÇÃO! O XI FTSL FOI ADIADO PARA 2020!</p><p></p></div>
 
                         <br>
                 </div>
 
                 <div class="col s12 m12 l6 xl6 hide-on-med-and-down center-align">
-<!--                    <div class="md-font white-text valign" style="margin: 0">
-<p class="flow-text" style="font-color:white"><a href="https://ftsl.websiteseguro.com/ftsl11/apps/certificados">CERTIFICADO DE PALESTRAS</a></p>
-<p class="flow-text" style="font-color:white"><a href="http://sistema.ftsl.org.br/ftsl11/minicursos/certificado/">CERTIFICADO DE MINICURSOS</a></p>
-                    </div>-->
+                    <div class="md-font white-text valign" style="margin: 0">
+			    <p class="flow-text">Aguarde novas datas e local</p>    
+<!--<p class="flow-text" style="font-color:white"><a href="https://ftsl.websiteseguro.com/ftsl11/apps/certificados">CERTIFICADO DE PALESTRAS</a></p>
+<p class="flow-text" style="font-color:white"><a href="http://sistema.ftsl.org.br/ftsl11/minicursos/certificado/">CERTIFICADO DE MINICURSOS</a></p>-->
+                    </div>
                 </div>
             </div>
         </div>
@@ -134,7 +135,7 @@ image: Web128x128.jpg
     <section class="panel blue-grey darken-4">
         <p style="color:white"></p>
         <div class="green">
-		<a href=""><img src="" width="100%" height="500px"></a>
+		<a href="https://www.openstreetmap.org/#map=18/-25.43922/-49.26889"><img src="images/openstreetmap.png" width="100%" height="500px"></a>
         </div>
     </section>
 
