--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ image: Web128x128.jpg
             <div class="row">
                 <div class="col s12 m12 l6 xl6 center-align">
                     <div class="md-font flow-text blue-text text-lighten-5 valign">
-                        <p class="flow-text">XI FÓRUM DE TECNOLOGIA EM SOFTWARE LIVRE E ABERTO</p><p class="flow-text">ATENÇÃO! O XI FTSL FOI ADIADO PARA 2020!</p><p></p></div>
+                        <p class="flow-text">XI FÓRUM DE TECNOLOGIA EM SOFTWARE LIVRE E ABERTO</p><p class="flow-text">ADIADO, SEM PREVISÃO</p><p></p></div>
 
                         <br>
                 </div>
